ruteado welcome,signup y login

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ body{
     --element-marging: 1rem;
 }
 
-#container{
+.container{
     width: 100%;
     height: 100%;
     display: flex;
@@ -26,7 +26,7 @@ body{
     align-items: center;
 }
 
-#container button{
+.container button{
     margin: var(--element-marging);
     padding: var(--element-padding);
     padding-top: 1.2rem;
@@ -40,11 +40,11 @@ body{
     justify-content: center;
  }
 
-#container img{
+.container img{
     margin: 5rem;
 }
 
-#container button img{
+.container button img{
     width: 1.5rem;
     margin: 0;
     margin-right: var(--element-marging);
