--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,16 @@ body{
     background-size: cover;
 }
 
+#root{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 :root{
-    --main-color: rgba(154,84,160,0.5);
-    --element-padding: 1rem 2rem;;
+    --main-color: rgb(154,84,160);
+    --second-color: rgb(255, 168, 0);
+    --element-padding: 1rem 2rem;
     --element-marging: 1rem;
 }
 
@@ -21,17 +28,18 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
+    gap: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+
 .container button{
-    margin: var(--element-marging);
     padding: var(--element-padding);
-    padding-top: 1.2rem;
+    padding: 1rem 0;
     font-size: 1.5rem;
-    width: 250px;
+    width: 20rem;
     height: auto;
     border-radius: 2rem;
     cursor: pointer;
@@ -40,12 +48,51 @@ body{
     justify-content: center;
  }
 
+ .container button:hover {
+    color: white;
+    background: var(--main-color);
+ }
+
 .container img{
     margin: 5rem;
+    width: 20rem;
 }
 
 .container button img{
     width: 1.5rem;
     margin: 0;
     margin-right: var(--element-marging);
+}
+
+/* Formato secondView*/
+
+.secondView {
+    background: white;
+    border-radius: 20px;
+    margin: 15rem 0;
+    width: auto;
+    height: auto;
+    padding: 6rem 3rem;
+    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
+}
+
+.secondView input {
+    background: rgb(235, 235, 235);
+    padding: 1rem 0;
+    font-size: 1.5rem;
+    width: 23rem;
+    height: auto;
+    border-radius: 2rem;
+    border: 0;
+    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
+    text-align: center;
+}
+
+.secondView button {
+    background: var(--main-color);
+    color: white;
+}
+
+.secondView button:hover {
+    background: var(--second-color);
 }
