--- a/src/style.css
+++ b/src/style.css
@@ -28,12 +28,22 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 2rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+/* .error{
+    display:none;
+} */
+.error{
+    font-size: 1rem;
+    color: red;
+    width: 22rem ;  
+    text-align: center;
+    line-height: 1.1rem;
+    display: block;
+}
 
 .container button{
     padding: var(--element-padding);
@@ -86,11 +96,13 @@ body{
     border: 0;
     box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
     text-align: center;
+    margin-bottom: 1.5rem;
 }
 
 .secondView button {
     background: var(--main-color);
     color: white;
+    margin-top: 1.5rem;
 }
 
 .secondView button:hover {
@@ -104,6 +116,7 @@ label{
 h2{
     font-size: 2rem;
     color: var(--main-color);
+    margin-bottom: 1.5rem;
 }
 
 footer{
