--- a/src/style.css
+++ b/src/style.css
@@ -33,16 +33,25 @@ body{
     align-items: center;
 }
 
-/* .error{
-    display:none;
-} */
 .error{
+    display: none;
+}
+
+.error-display{
     font-size: 1rem;
     color: red;
     width: 22rem ;  
     text-align: center;
     line-height: 1.1rem;
     display: block;
+}
+
+#correctMessage{
+    display: none;
+}
+
+#errorMessage{
+    display: none;
 }
 
 .container button{
