--- a/src/style.css
+++ b/src/style.css
@@ -24,33 +24,26 @@ body{
     --element-marging: 1.5rem;
 }
 
+/* Intento de cambio de clase para background 
+.root-background1{
+    background-image: linear-gradient(rgba(154,84,160,0.5), rgba(255, 168, 0, 0.5)), url(./media/background-1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position-x: 35%;
+}
+
+.root-background2{
+    background-image: linear-gradient(rgba(154,84,160,0.5), rgba(255, 168, 0, 0.5)), url(./media/background-2.png);
+    background-repeat: repeat;
+    background-size: 300px;
+} */
+
 .containerWelcome{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-
-.containerForm{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.containerForm button{
-    background-color: white;
-    margin: 1rem;
-    padding: var(--element-padding);
-    font-size: 1.5rem;
-    width: 20rem;
-    height: auto;
-    border-radius: 2rem;
-    cursor: pointer;
-    border: 0;
-    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
-    justify-content: center;
- }
 
 .containerWelcome button{
     background-color: white;
@@ -169,44 +162,81 @@ body{
 
 /* Formato login & signup*/
 .containerForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: white;
     border-radius: 20px;
+    gap: 2rem;
     width: auto;
     height: auto;
     padding: 3rem;
+    flex-wrap:wrap;
+    margin: 3rem;
     box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
 }
 
-.containerForm input {
+.divContent {
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: fit-content;
+    gap:1rem;
+    max-width: 65rem;
+    gap:3rem;
+}
+
+.divContent div {
+    display:inline;
+    text-align: center;
+    max-width: 30rem;
+    width: 23rem;
+
+}
+
+.divContent label{
+    font-size: 1.5rem;
+    margin-top: var(--element-marging);
+}
+
+.divContent input {
     padding: var(--element-padding);
     font-size: 1.5rem;
+    max-width: 30rem;
     width: 23rem;
     height: 2rem;
     border-radius: 2rem;
     border: 1px solid rgb(28, 28, 28);
     text-align: center;
+    margin-top: 0.5rem;
 }
 
-.containerForm button {
+.containerForm button{
     background: var(--main-color);
     color: white;
-    margin-top: var(--element-marging);
-}
+    margin: 2rem 0 0 0;
+    padding: var(--element-padding);
+    font-size: 1.5rem;
+    width: 20rem;
+    height: auto;
+    border-radius: 2rem;
+    cursor: pointer;
+    border: 0;
+    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
+    justify-content: center;
+ }
 
 .containerForm button:hover {
     background: var(--second-color);
 }
 
-.containerForm label{
-    font-size: 1.5rem;
-    margin-top: var(--element-marging);
-}
+
 
 h2{
     font-size: 2rem;
     color: var(--main-color);
     margin: 0;
-    /* margin-bottom: var(--element-marging); */
 }
 
 footer{
@@ -221,6 +251,21 @@ footer{
 footer p{
     font-size: 1.2rem;
     color: #282828;
+}
+
+/*CSS Login*/
+.divAll{
+    display: flex;
+    flex-direction: row;
+    margin: 3rem;
+    width: auto;
+    height: auto;
+}
+
+.divImage{
+    margin: 0;
+    width: 50%;
+    height: 100%;
 }
 
 @media (min-width: 700px) {
@@ -282,4 +327,8 @@ footer p{
         display: none;
     }
 
+    /*elementos signUp*/
+    .divContent div {
+        text-align: left;
+    }
 }
