--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 *{
-    /* font-size: 62.5%;  */
+    font-size: 62.5%;
     font-family: 'Roboto';
 }
 
@@ -263,6 +263,61 @@ footer p{
 
 .divImage{
     display:none;
+}
+/*Formato Home*/
+.home {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+    gap: 2rem;
+    margin:0 5rem;
+    align-items: center;
+    background-color:white;
+
+}
+.containerNewPost{
+    display: flex;
+    width: auto;
+    height: auto;
+}
+.containerNewPost input{
+    background-color:rgba(217, 217, 217, 0.65);
+    border-radius: 1rem;
+    border:0;
+    padding: 1rem;
+    min-width: 25rem;
+    height: 100%;
+    margin: 0;
+    font-size: 1.5rem;
+}
+
+.containerNewPost button{
+    background: rgba(154,84,160,0.75);
+    color: white;
+    margin: 2rem 0 0 0;
+    padding: var(--element-padding);
+    font-size: 1rem;
+    width: 10rem;
+    height: auto;
+    border-radius: 2rem;
+    cursor: pointer;
+    border: 0;
+    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
+    align-self: right;
+}
+.containerAllPost{
+    height: 100%;
+    width: 100%;
+}
+.containerPost{
+    background-color: rgba(154, 84, 160, 0.25);
+    border-radius: 1rem;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-size: 2rem;
 }
 
 @media (min-width: 700px) {
