--- a/src/style.css
+++ b/src/style.css
@@ -135,7 +135,7 @@ body{
 }
 
 .modalContainer{
-    background-color: rgba(255, 255, 255, 0.75);
+ 
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -145,19 +145,20 @@ body{
 }
 
 .modalContent{
+    background-color: rgba(255, 255, 255, 0.75);
     color: var(--main-color);
     font-size: 1.5rem;
+    padding: var(--element-marging);
 }
 
-.modalSpan{
-    width: 4.1rem;
-    height: 4.1rem;
-    font-size: 3rem;
-    font-weight: bold;
+.closeModal{
+    width: 4rem;
+    height: 4rem;
+    font-size: 2.8rem;
     color: var(--main-color);
     border-radius: 50%;
     background-color: white;
-    margin-bottom: -6rem;
+    margin: 2rem;
     cursor: pointer;
 }
 
@@ -166,6 +167,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background: white;
     border-radius: 20px;
     gap: 2rem;
@@ -281,7 +283,7 @@ footer p{
 }
 
 .header {
-    background-image: linear-gradient(rgba(154,84,160,0.5), rgba(255, 168, 0, 0.5)),url(./media/background-2.png);
+    background-image: linear-gradient(rgba(255, 168, 0, 0.5), rgba(154,84,160,0.75)),url(./media/background-2.png);
     background-repeat: repeat;
     background-size: 30rem;
     width: 100%;
@@ -298,6 +300,7 @@ footer p{
     margin: 2rem;
 }
 
+
 .hide{
     display: none;
 }
@@ -307,15 +310,15 @@ footer p{
     top:0;
     right: 0;
     background: white;
-    width: 6rem;
-    height: 6rem;
-    padding: 4rem;
+    width: 13rem;
+    height: 13rem;
+    padding: 2rem;
     z-index: 1;
     margin: 2rem;
     border-radius:1rem;
     display: flex;
     flex-direction: column;
-    gap:1rem;
+    gap:1.5rem;
     align-items: center;
     justify-content: center;
 }
@@ -340,17 +343,21 @@ footer p{
 
 .nav button {
     text-align: left ;
-    background: rgba(154,84,160,0.75);
-    color: white;
+    background: white;
+    color: #282828;
     padding: 1rem;
-    font-size: 1rem;
-    width: 10rem;
+    font-size: 1.5rem;
+    width: 100%;
     height: auto;
     border-radius: 2rem;
     cursor: pointer;
     border: 0;
-    box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
 }
+
+.nav button:hover {
+    color: white;
+    background: var(--main-color);
+ }
 
 .menuBg {
 position: fixed;
@@ -375,9 +382,9 @@ display: none;
 
 .containerNewPost input{
     background-color:rgba(217, 217, 217, 0.65);
-    border-radius: 2rem;
+    border-radius: 3rem;
     border:0;
-    padding: 1rem;
+    padding: 2rem 1rem;
     width: 100%;
     height: auto;
     font-size: 1.5rem;
@@ -412,14 +419,35 @@ display: none;
     height: auto;
     margin: 0;
     font-size: 2rem;
+   
+}
+
+.containerPost p {
+    padding: 0 1rem;
+    align-self: flex-start;
+    color: #282828;
 }
 
 .optionsMenu {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     align-items: end;
     width: 100%;
     height: auto;
+    gap: 0.5rem;
+}
+
+.optionsMenu button {
+    background: rgba(244, 244, 244, 0.75);
+    color: var(--main-color);
+    font-size: 1rem;
+    padding: 0.5rem;
+    width: auto;
+    height: auto;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    border: 0;
+
 }
 
 @media (min-width: 700px) {
@@ -477,7 +505,7 @@ display: none;
         text-align: left;
     }
 
-    .modalSpan{
+    .closeModal{
         display: none;
     }
 
