--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 *{
     font-size: 62.5%;
-    font-family: 'Roboto';
+    font-family:'Roboto', Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -60,11 +60,6 @@ body{
     justify-content: center;
  }
 
- .containerWelcome button:hover {
-    color: white;
-    background: var(--main-color);
- }
-
 .logo-fems{
     margin-bottom: 5rem;
     width: 20rem;
@@ -95,7 +90,7 @@ body{
 
 .google span{
     font-size: 1.5rem;
-    font-family: 'roboto';
+    font-family:'Roboto', Arial, Helvetica, sans-serif;
 }
 /* form view */
 .error{
@@ -187,7 +182,6 @@ body{
     width: fit-content;
     gap:1rem;
     max-width: 65rem;
-    gap:3rem;
 }
 
 .divContent div {
@@ -195,7 +189,6 @@ body{
     text-align: center;
     max-width: 30rem;
     width: 23rem;
-
 }
 
 .divContent label{
@@ -229,12 +222,6 @@ body{
     box-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
     justify-content: center;
  }
-
-.containerForm button:hover {
-    background: var(--second-color);
-}
-
-
 
 h2{
     font-size: 2rem;
@@ -293,7 +280,7 @@ footer p{
 }
 
 .header p {
-    font-family: "Nunito";
+    font-family: "Nunito", Arial, Helvetica, sans-serif;
     font-size: 3.5rem;
     color: white;
     text-shadow: 0 1px 2px rgba(40,40, 40, 0.5);
@@ -324,7 +311,7 @@ footer p{
 }
 
 #btn-menu {
-  display: flex;;
+  display: flex;
   align-items: center;
   justify-content: center;
   width: 4rem;
@@ -353,11 +340,6 @@ footer p{
     cursor: pointer;
     border: 0;
 }
-
-.nav button:hover {
-    color: white;
-    background: var(--main-color);
- }
 
 .menuBg {
 position: fixed;
@@ -449,6 +431,21 @@ display: none;
     border: 0;
 
 }
+
+/*Button Hovers*/
+.containerWelcome button:hover {
+    color: white;
+    background: var(--main-color);
+ }
+ 
+.containerForm button:hover {
+    background: var(--second-color);
+}
+
+.nav button:hover{
+    color: white;
+    background: var(--main-color);
+ }
 
 @media (min-width: 700px) {
 
