--- a/src/style.css
+++ b/src/style.css
@@ -447,6 +447,31 @@ display: none;
     border: 0;
 
 }
+.buttonLike {
+    background: rgba(244, 244, 244, 0.75);
+    color: var(--main-color);
+    font-size: 1.5rem;
+    padding: 0;
+    width: auto;
+    height: auto;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.countLike p {
+    margin: 0;
+}
+
+.buttonLike i {
+    padding: 1rem 1rem 1rem 0;
+    color:var(--main-color);
+} 
+
+
 
 /*Button Hovers*/
 .containerWelcome button:hover {
