Se modifico el css

--- a/src/style.css
+++ b/src/style.css
@@ -402,10 +402,15 @@ display: none;
 }
 
 .info p {
-    font-size: 1rem;
+    font-size:1rem;
     margin: 0.2rem 0;
 }
-
+.info h3 {
+    font-size: 1rem;
+    color: #454545;
+    margin: 0.2rem 0;
+    padding: 1rem;
+}
 .containerPost p {
     padding: 0 1rem;
     align-self: flex-start;
@@ -610,12 +615,18 @@ display: none;
     }
 
     .info h3 {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         color: #454545;
         margin: 0.2rem 0;
         padding: 1rem;
     }
-
+    footer p{
+        font-size: 1.5rem;
+    }
+    
+    footer a{
+        font-size: 1.5rem;
+    }
     .info p {
         font-size: 1.2rem;
         margin: 0.2rem 0;
@@ -623,14 +634,8 @@ display: none;
     }
 
     .containerPost {
-        font-size: 2.8rem;
+        font-size: 2.5rem;
     }
 
-    footer p{
-        font-size: 1.5rem;
-    }
 
-    footer a{
-        font-size: 1.5rem;
-    }
 }
